User  Detail For with appointment section done..

--- a/views/authentication.pug
+++ b/views/authentication.pug
@@ -40,6 +40,8 @@ else
         <div class="login-form">
         if(notValidated)
             p(style="color:red;") *Email or Password is Incorrect!
+        if(registered)
+            p(style="color:red;") Successfully Registered. Login to Continue..
         <div class="title">Login</div>
           <div class="input-boxes">
             <div class="input-box">
