--- a/views/home.pug
+++ b/views/home.pug
@@ -23,7 +23,7 @@ body
         ul 
             li 
                 if(!isValidated)
-                    a(class="active" href="#") Home
+                    a(class="active" href="/") Home
                 else 
                     a(class="active" href="#") Profile
             li 
@@ -45,8 +45,8 @@ body
             <p>Proving medical assistant in few clicks, connected to 3000+ top doctors from all over the World,ready to treat, ready to cure. <br><br>
             </p>
             <div class="s1_link">
-                <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Quick support&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
-                <li><a href="#" class="qs"> Book appointment </a></li>
+                <li><a href="/quicksupport">&nbsp;&nbsp;&nbsp;&nbsp;Quick support&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
+                <li><a href="appointment" class="qs"> Book appointment </a></li>
             </div>
     </section>
 
