--- a/views/form_doctor.pug
+++ b/views/form_doctor.pug
@@ -64,6 +64,15 @@
 <span class="details">Fee</span>
 <input type="text" placeholder="Enter your Fee" name="fee" required>
 </div>
+<div class="input-boxes">
+<span class="details">Description</span>
+<input type="text" placeholder="Enter your Description" name="description" required>
+</div> 
+<div class="input-boxess">
+<span class="details">About Myself</span><br>
+//- <input type="text" placeholder="Enter about Yourself" required>
+<textarea class="text-area" rows="10" placeholder="Enter about Yourself" name="about_me" required> </textarea>
+</div>
 </div>
 <div class="gender-details">
 <input type="radio" name="gender" id="dot-1" value="male">
@@ -89,7 +98,6 @@
 <input type="submit" value="Register">
 <input type="submit" value="Exit">
 </div>
-		
 </form>
 </div>
 </div>
