Appointment Status change and patient details

--- a/views/home.pug
+++ b/views/home.pug
@@ -44,8 +44,9 @@ body
     include navigation.pug
     
     <section class="s1">
+        .s1_box-1
             <h1>We care as we cure</h1><br>
-            <p>Proving medical assistant in few clicks, connected to 3000+ top doctors from all over the World,ready to treat, ready to cure. <br><br>
+            <p>Providng medical assistant in few clicks, connected to 3000+ top doctors from all over the World. <em>Ready to treat. Ready to cure.</em> <br><br>
             </p>
             <div class="s1_link">
                 <li><a href="/quicksupport">&nbsp;&nbsp;&nbsp;&nbsp;Quick support&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
