--- a/public/home.css
+++ b/public/home.css
@@ -4,7 +4,6 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
-  /* background: black; */
 }
 nav {
   background: #fff;
@@ -43,7 +42,6 @@ nav ul li a:hover {
   color: rgb(44, 109, 248);
   border-left: 3px solid rgb(44, 92, 248);
   border-bottom: 5px solid rgb(44, 92, 248);
-  /* transition: .5s; */
   text-shadow: 0.2px 0.2px 0.5px rgb(30, 119, 252);
   border-left: 3px solid rgb(41, 166, 238);
   border-bottom: 4px solid rgb(41, 166, 238);
@@ -93,10 +91,10 @@ nav ul li a:active {
     margin-left: 5px;
   }
   nav ul li a {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
-@media (max-width: 1050px) {
+@media (max-width: 1250px) {
   .checkbtn {
     display: block;
   }
@@ -132,18 +130,21 @@ nav ul li a:active {
 .s1 {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(3, 8, 20, 0.5), rgba(3, 8, 20, 0.5)),
-    url(pimg/s1.jpg) center;
+  background: url(pimg/fulldoc.jpg);
   background-size: cover;
-  background-position: center;
+  /* background-position: center; */
+}
+.s1_box-1 {
+  width: 60%;
+  margin-left: 40px;
 }
 .s1 h1 {
   text-align: center;
-  padding-top: 150px;
+  padding-top: 135px;
   color: white;
   text-shadow: 4px 4px 6px rgb(7, 88, 182);
   font-family: "Merienda", cursive;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: bolder;
 }
 .s1 p {
@@ -158,7 +159,7 @@ nav ul li a:active {
 }
 .s1_link {
   text-align: center;
-  padding-top: 40px;
+  padding-top: 30px;
 }
 .s1_link li {
   display: inline-block;
@@ -171,7 +172,7 @@ nav ul li a:active {
   background-color: rgb(10, 105, 214);
   text-decoration: none;
   color: white;
-  font-family: "Righteous", cursive;
+  font-family: "Righteous";
   font-size: 1.1rem;
   border-radius: 20px;
   padding: 15px;
@@ -194,10 +195,13 @@ nav ul li a:active {
   background-color: rgb(209, 211, 211);
   color: rgb(10, 105, 214);
 }
-@media (max-width: 860px) {
+@media (max-width: 1350px) {
   .s1 h1 {
-    padding-top: 80px;
-    font-size: 2.5rem;
+    padding-top: 160px;
+    font-size: 4.3rem;
+  }
+  .s1 p {
+    font-size: 1.2rem;
   }
   .s1_link li {
     display: block;
@@ -205,19 +209,56 @@ nav ul li a:active {
     padding: 10px;
   }
 }
+@media (max-width: 1130px) {
+  .s1 h1 {
+    padding-top: 110px;
+    font-size: 4rem;
+  }
+  .s1 p {
+    font-size: 1.2rem;
+  }
+  .s1_link li {
+    display: block;
+    margin-top: 20px;
+    padding: 10px;
+  }
+  .s1_link {
+    margin-top: 10px;
+    padding-top: 0px;
+  }
+}
+@media (max-width: 600px) {
+  .s1 h1 {
+    padding-top: 110px;
+    font-size: 3rem;
+  }
+  .s1 p {
+    font-size: 1rem;
+  }
+  .s1_link li {
+    display: block;
+    margin-top: 20px;
+    padding: 10px;
+  }
+  .s1_link {
+    margin-top: 10px;
+    padding-top: 0px;
+  }
+}
 
 /*SECTION-2 DOCTORS*/
 
 .s2 {
   width: 90%;
-  margin: auto;
+  margin: 50px;
   text-align: center;
   padding-top: 100px;
-  background: url(3docback.jpg) no-repeat center center/cover;
+  background: url(pimg/3docback.jpg) no-repeat center center/cover;
+  box-shadow: -14px -14px 14px rgb(137, 148, 150);
 }
 .s2h {
   font-size: 2rem;
-  color: blue;
+  color: rgb(255, 255, 255);
   font-family: "Merienda", cursive;
   text-shadow: 3px 3px 5px black;
 }
@@ -228,7 +269,7 @@ nav ul li a:active {
 }
 .s2 .services .box {
   flex-basis: 31%;
-  background-color: black;
+  background-color: whitesmoke;
   font-family: "Righteous", cursive;
   color: rgb(7, 83, 170);
   border-radius: 20px;
@@ -270,7 +311,7 @@ nav ul li a:active {
 .services .box:hover {
   transform: scale(1.05) !important;
 }
-@media (max-width: 860px) {
+@media (max-width: 1060px) {
   .s2 .services {
     flex-direction: column;
   }
@@ -362,7 +403,6 @@ nav ul li a:active {
 }
 
 /*SECTION-4 STATS*/
-/****************************************************************************/
 .stats {
   background: url(pimg/lastsec.jpg) no-repeat center center/cover;
   display: flex;
@@ -385,7 +425,7 @@ nav ul li a:active {
   padding-left: 50px;
   padding-right: 50px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 900px) {
   .stats .box4 {
     padding-left: 10px;
     padding-right: 10px;
@@ -415,19 +455,4 @@ footer {
   font-size: 1.5rem;
   margin: 0;
   text-align: center;
-}
-
-/* Modal */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
