--- a/public/profile_doctor.css
+++ b/public/profile_doctor.css
@@ -4,6 +4,7 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
 }
 nav {
   background: #fff;
@@ -130,20 +131,26 @@ nav ul li a:active {
 
 /* form */
 body {
-  /* background: linear-gradient(to left,#6572ec,#7daceb); */
-  background: url(pimg/profileback.jpg) no-repeat center center/cover;
+  background: linear-gradient(to left, #0a69d4, #b6d3fa);
+  /* background: url(profileback.jpg) no-repeat center center/cover; */
   height: 900px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+/* .main{
+    position: relative;
+    top: 620px;
+    left: 50%;
+    height: 600px;
+  }
+   */
 .wrapper {
   position: absolute;
-  /* top: 75%; */
-  top: 480px;
+  top: 710px;
   left: 50%;
-  /* left: 400px; */
   transform: translate(-50%, -50%);
-  width: 900px;
-  height: 730px;
+  width: 1000px;
+  height: 1100px;
   display: flex;
   box-shadow: 0 2px 10px 0 rgb(71, 86, 170);
 }
@@ -156,7 +163,6 @@ body {
   border-bottom-left-radius: 5px;
   text-align: center;
   color: #fff;
-  font-family: Open Sans;
 }
 
 .wrapper .left img {
@@ -167,11 +173,19 @@ body {
 .wrapper .left h3 {
   margin-bottom: 10px;
   font-size: x-large;
-  /* font-size: 1.3rem; */
+}
+
+.wrapper .left h4 {
+  margin: 10px 0px;
+  font-size: 1.2rem;
+}
+
+.wrapper .left h4 strong {
+  color: rgb(226, 236, 240);
 }
 
 .wrapper .left p {
-  font-size: 18px;
+  font-size: 29px;
 }
 
 .wrapper .right {
@@ -189,16 +203,32 @@ body {
 
 .wrapper .right .info h2,
 .wrapper .right .projects h2 {
+  border-left: 2px solid rgb(3, 3, 163);
+  padding-left: 5px;
   margin-bottom: 15px;
   padding-bottom: 5px;
   border-bottom: 1px solid #e0e0e0;
-  /* color: #353c4e; */
   color: #082c86;
-  border-left: 2px solid rgb(3, 3, 163);
-  padding-left: 5px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 24px;
+}
+
+.wrapper .right .info_data,
+.wrapper .right .projects_data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.wrapper .right .info_data .data,
+.wrapper .right .projects_data .data {
+  width: 45%;
+}
+
+.wrapper .right .info_data .data h3,
+.wrapper .right .projects_data .data h3 {
+  color: #353c4e;
+  margin-bottom: 8px;
+  font-size: 1.3rem;
 }
 
 .data p a {
@@ -222,32 +252,6 @@ body {
   color: #63676d;
 }
 
-.wrapper .right .info_data,
-.wrapper .right .projects_data {
-  display: flex;
-  justify-content: space-between;
-}
-
-.wrapper .right .info_data .data,
-.wrapper .right .projects_data .data {
-  width: 45%;
-}
-
-.wrapper .right .info_data .data h3,
-.wrapper .right .projects_data .data h3 {
-  color: #353c4e;
-  margin-bottom: 5px;
-  font-size: 1.2rem;
-}
-
-.wrapper .right .info_data .data p,
-.wrapper .right .projects_data .data p {
-  /* font-size: 17px; */
-  font-size: 18px;
-  margin-bottom: 10px;
-  color: #919aa3;
-}
-
 .wrapper .social_media ul {
   display: flex;
 }
@@ -256,7 +260,7 @@ body {
   width: 45px;
   height: 45px;
   background: linear-gradient(to right, #0a69d4, #5298f3);
-  margin-right: 10px;
+  margin-right: 40px;
   border-radius: 5px;
   text-align: center;
   line-height: 45px;
@@ -268,73 +272,3 @@ body {
   font-size: 18px;
 }
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
-
-/* Button */
-.myBtn {
-  display: block;
-  padding-left: 17px;
-  /* padding-right: 17px;
-  margin-right: 10px; */
-  margin: auto;
-  background-color: rgb(31, 81, 255);
-  text-decoration: none;
-  color: white;
-  font-family: "Righteous", cursive;
-  font-size: 1.1rem;
-  border-radius: 20px;
-  padding: 15px;
-  box-shadow: 4px 4px 5px rgb(4, 92, 151);
-  margin: auto;
-}
-
-.myBtn:hover {
-  background-color: rgb(10, 84, 170);
-}
-
-.modal p {
-  color: rgb(5, 29, 116);
-  text-align: justify;
-  padding: 20px 30px;
-  font-size: 1.24rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-}
-
-/* Modal */
-.modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
