--- a/views/form_doctor.pug
+++ b/views/form_doctor.pug
@@ -6,7 +6,7 @@
   <title> Responsive Registration Form </title>
     <link rel="stylesheet" href="../form_doctor.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script type="text/javascript" src="../form_doctor.js"> 
+<script type="text/javascript" src="/form_doctor.js"> 
 </script>
  
    </head>
@@ -96,7 +96,7 @@
 </div>
 <div class="button">
 <input type="submit" value="Register">
-<input type="submit" value="Exit">
+<input type="submit" value="Log Out">
 </div>
 </form>
 </div>
