--- a/public/appointment.css
+++ b/public/appointment.css
@@ -169,8 +169,9 @@ nav ul li a:active {
 }
 
 .form {
-  margin-top: 120px;
-  display: flex;
+  margin-top: 30px;
+  /* border: 2px solid black; */
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -201,10 +202,11 @@ select::-ms-expand {
 .select {
   position: relative;
   display: flex;
-  width: 20em;
+  width: 30em;
   height: 3em;
   line-height: 3;
-  background: #aab0bd;
+  margin: 10px;
+  /* background: #aab0bd; */
   overflow: hidden;
   border-radius: 0.25em;
 }
@@ -322,4 +324,53 @@ select::-ms-expand {
   color: rgb(8, 9, 117);
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-weight: 900;
+}
+
+.details {
+  margin-right: 15px;
+  margin-left: 105px;
+  background: none;
+}
+
+.details2 {
+  margin-right: 25px;
+}
+.clear_filter {
+  display: inline-block;
+  padding-top: 10px;
+}
+form .button,
+.clear_filter {
+  height: 45px;
+  margin: 25px 0;
+}
+form .button input,
+.clear_filter {
+  height: 100%;
+  width: 23%;
+  margin-left: 20px;
+  margin-top: 0px;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  /* background: linear-gradient(135deg, #0665a5, #8886ec); */
+  background: #155cb8;
+}
+form .button input:hover {
+  /* transform: scale(0.99); */
+  /* background: linear-gradient(-135deg, #243490, #503acc); */
+  background: #0a4899;
+}
+
+#filter {
+  margin-left: 55px;
+}
+
+#s2_0 {
+  margin-top: 7px;
 }
