--- a/views/form_user.pug
+++ b/views/form_user.pug
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Responsive Registration Form </title>
-    <link rel="stylesheet" href="../form_user.css">
+    <link rel="stylesheet" href="/form_user.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
