--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -13,9 +13,9 @@ nav
             li 
                 a(href="#") Services & Conditions
             li 
-                a(href="#") Contact Us 
+                a(href="#" class="em") Notifications  
             li 
-                a(href="#" class="em") Emergency  
+                a(href="#") Contact Us 
             li 
                 if(!isValidated)
                     a(href="authenticate" class="signin") Sign up/Log in
