--- a/views/profile_doctor.pug
+++ b/views/profile_doctor.pug
@@ -54,9 +54,9 @@
             li 
                 a(href="#") Services & Conditions
             li 
-                a(href="#") Contact Us 
+                a(href="#" class="em") Notifications  
             li 
-                a(href="#" class="em") Emergency  
+                a(href="#") Contact Us 
             li 
                 if(isValidated)
                     a(href="authenticate" class="signin") Sign up/Log in
