--- a/views/home.pug
+++ b/views/home.pug
@@ -46,7 +46,7 @@ body
     <section class="s1">
         .s1_box-1
             <h1>We care as we cure</h1><br>
-            <p>Providng medical assistant in few clicks, connected to 3000+ top doctors from all over the World. <em>Ready to treat. Ready to cure.</em> <br><br>
+            <p>Providing medical assistant in few clicks. Connected to 3000+ top doctors from all over the World. <em>Ready to treat. Ready to cure.</em> <br><br>
             </p>
             <div class="s1_link">
                 <li><a href="/quicksupport">&nbsp;&nbsp;&nbsp;&nbsp;Quick support&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
