--- a/views/show_more.pug
+++ b/views/show_more.pug
@@ -40,7 +40,7 @@
                 if(!isValidated)
                     a(class="active" href="/") Home
                 -else{
-                    -const url = "../user/" + _id;
+                    -const url = "/user/" + _id;
                     a(class="active" href=url) Profile
                 -}
             li 
@@ -58,35 +58,126 @@
             a(href="/") 
                 img(src="/pimg/logopro.png" alt="ICU soon")
 
-    .details(style="display:flex; justify-content:center; width: 100%; align-items: center; height: 50vh;") 
-        .box-1(style="margin-right: 50px;")
-            h2 USER
-            p= result[0].first_name + " " + result[0].last_name
-            p= "Phone: " + result[0].contact_number
-            p= "Age: " + result[0].age
-        .box-2 
-            h2 DOCTOR
-            p= result2[0].first_name + " " + result2[0].last_name
-            p= "Clinic: " + result2[0].clinic_name
-            p= "Fee: " + result2[0].fee
-            p= "Address: " + result2[0].clinic_name + " " + result2[0].city + ", " + result2[0].state + ", " + result2[0].pin_code
-    
-    -
-     var link;
-     if(status == 2)
-        link = `/appointment/appointed/?user_id=${result[0].registration_id}`;
-     else 
-        link = `/users/${result2[0].user_id}`;
+    <div class="head">
+        Appointment Details
+    </div>
 
-    form(action=`/appointment/appointed/?user_id=${result[0].registration_id}` method="POST")
-        input(type="number" name="doctor_id" value=`${result2[0].registration_id}` style="display:none")
-        input(type="text" name="appointment_date" value=`${date}` style="display:none")
-        input(type="number" name="fee" value=`${result2[0].fee}` style="display:none")
-        //- form(action=`/appointment/appointed/?${result[0].registration_id}` method="POST")
-        -if(status == 2)
-            button(type="submit" style="display:block; margin:auto;") Mark as Complete
-        -else if(status == 1)
-            button(type="submit" style="display:block; margin:auto;") Go to Profile
+
+    <section class="s1">
+        <div class="left">
+            <div class="left-1">
+                <img src="/pimg/user3.png" alt="">
+                <div class="nameid">
+                    <h1><u>Name:</u> 
+                        = result[0].first_name + " "
+                    </h1>
+                    <h1><u>ID:</u> 
+                       = "20BCS70" + result[0].registration_id
+                    </h1>
+                </div>
+            </div>
+
+            <div class="left-detail">
+                <div class="data1">
+                    <h3><u>Booked for:</u> 
+                        = result2[0].specialization
+                    </h3>
+                    <h3><u>Date:</u> 
+                        = "12-04-2017"
+                    </h3>
+                    <h3><u>Age:</u> 
+                        = result[0].age
+                    </h3>
+                    <h3><u>Gender:</u> 
+                        = result[0].gender.charAt(0).toUpperCase() + result[0].gender.slice(1, 7)
+                    </h3>
+                    <h3><u>Email:</u> 
+                        = result[0].email
+                    </h3>
+                    <h3><u>Contact number:</u> 
+                        = result[0].contact_number
+                    </h3>
+                    <h3><u>Location:</u> 
+                        = result[0].city + ", " + result[0].state
+                    </h3>
+                </div>
+                <div class="click">
+                     -var link;
+                     -if(status == 2){
+                        -link = `/appointment/appointed/?user_id=${user_id}`;
+                     -}else{ 
+                        -link = `/user/${result2[0].registration_id}`;
+                     -}
+                     
+                     -var type = "GET";
+                     -if(status == 2)
+                          -type = "POST";
+                     
+                     form(action=link method=type)
+                        input(type="number" name="doctor_id" value=`${result2[0].registration_id}` style="display:none")
+                        input(type="text" name="appointment_date" value=`${date}` style="display:none")
+                        input(type="number" name="fee" value=`${result2[0].fee}` style="display:none")
+                        //- form(action=`/appointment/appointed/?${result[0].registration_id}` method="POST")
+                        -if(status == 2)
+                            button(type="submit" class="button" style="display:block; margin:auto;") 
+                                span Mark as Complete
+                        -else if(status == 1)
+                            button(type="submit" class="button" style="display:block; margin:auto;") 
+                                span Go to Profile
+                    
+                        //-  <button class="button"><span>Mark as Complete</span></button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="right-detail">
+            <h1>Treatment Details</h1>
+            <div class="data2">
+                <h3><u>Doctor name:</u> 
+                    = "Dr. " + result2[0].first_name + result2[0].last_name
+                </h3>
+                <h3><u>Doctor ID:</u> 
+                    = "20BCS71" + result2[0].registration_id
+                </h3>
+                <h3><u>Booked on:</u> 09-04-2017</h3>
+                <h3><u>Clinic name:</u>
+                    = " " + result2[0].clinic_name
+                </h3>
+                <h3><u>Location:</u> 
+                    = result2[0].city + ", " + result2[0].state
+                </h3>
+                <h3><u>Fee charged:</u>
+                    = " Rs. " + result2[0].fee
+                </h3>
+                <h3><u>Rated:</u> N/A</h3>
+            </div>
+        </div>
+
+    </section>
+    
+    //- -
+    //-  var link;
+    //-  if(status == 2)
+    //-     link = `/appointment/appointed/?user_id=${result[0].registration_id}`;
+    //-  else 
+    //-     link = `/user/${result2[0].registration_id}`;
+      
+    //-  let post_type = "GET";
+    //-  if(status==2)
+    //-     post_type = "POST";
+
+    //- form(action=link method=post_type)
+    //-     input(type="number" name="doctor_id" value=`${result2[0].registration_id}` style="display:none")
+    //-     input(type="text" name="appointment_date" value=`${date}` style="display:none")
+    //-     input(type="number" name="fee" value=`${result2[0].fee}` style="display:none")
+    //-     //- form(action=`/appointment/appointed/?${result[0].registration_id}` method="POST")
+    //-     -if(status == 2)
+    //-         button(type="submit" style="display:block; margin:auto;") Mark as Complete
+    //-     -else if(status == 1)
+    //-         button(type="submit" style="display:block; margin:auto;") Go to Profile
 
     
 
